GNOME Bugzilla – Bug 784758
shout2: fails to compile with gcc 7.1.0 on msys2
Last modified: 2017-07-11 06:28:10 UTC
Created attachment 355283 [details] fix compilation error with gcc 7.1.0 (msys2) gstshout2.h declares a uint which is not defined when compiling with gcc 7.1.0 on msys2. Proposed fix replaces that uint with a guint (and also replaces one stray int with gint).
Created attachment 355284 [details] [review] fix compilation error with gcc 7.1.0 (msys2)
Created attachment 355285 [details] [review] fix compilation error with gcc 7.1.0 (msys2)
commit c8204780b26207f0374fd2699d30435a0fe2b79d (HEAD -> master) Author: Philippe Renon <philippe_renon@yahoo.fr> Date: Mon Jul 10 18:57:11 2017 +0200 shout2: use gint and guint in place of int and uint this fixes a compilation error with gcc 7.1.0 on mys2 where uint is not defined https://bugzilla.gnome.org/show_bug.cgi?id=784758