shout2: use gint and guint in place of int and uint

this fixes a compilation error with gcc 7.1.0 on mys2 where uint is not defined

https://bugzilla.gnome.org/show_bug.cgi?id=784758